updates to introduction slide

--- a/slides/intro_notes-2024.html
+++ b/slides/intro_notes-2024.html
@@ -9,21 +9,10 @@
 <style type="text/css">
 .underline { text-decoration: underline; }
 </style>
-<link rel="stylesheet" href="../../reveal.js/dist/reveal.css"/>
+<link rel="stylesheet" href="../../reveal.js-fork/dist/reveal.css"/>
 
-<link rel="stylesheet" href="../../reveal.js/dist/theme/moon.css" id="theme"/>
+<link rel="stylesheet" href="../../reveal.js-fork/dist/theme/moon.css" id="theme"/>
 
-
-<!-- If the query includes 'print-pdf', include the PDF print sheet -->
-<script>
-    if( window.location.search.match( /print-pdf/gi ) ) {
-        var link = document.createElement( 'link' );
-        link.rel = 'stylesheet';
-        link.type = 'text/css';
-        link.href = '../../reveal.js/css/print/pdf.css';
-        document.getElementsByTagName( 'head' )[0].appendChild( link );
-    }
-</script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 </head>
 <body>
@@ -49,8 +38,8 @@
 <script src="../../reveal.js-plugins/audio-slideshow/RecordRTC.js"></script>
 
 <section>
-<section id="slide-orgd671f35">
-<h2 id="orgd671f35">CP213: Applied mathematics and problem solving</h2>
+<section id="slide-orgac3286c">
+<h2 id="orgac3286c">CP213: Applied mathematics and problem solving</h2>
 <h2>Module overview</h2>
 <h3>L Lue<br>Department&nbspof&nbspChemical&nbspand&nbspProcess&nbspEngineering<br>University&nbspof&nbspStrathclyde</h3>
 
@@ -76,8 +65,8 @@ of the module aims and contents.
 </section>
 </section>
 <section>
-<section id="slide-orgf25f4d1">
-<h2 id="orgf25f4d1">Overview</h2>
+<section id="slide-orgd8f2af3">
+<h2 id="orgd8f2af3">Overview</h2>
 <ul>
 <li>Module leader: Leo Lue &amp; Abdul Sharif</li>
 <li>Demonstrators: Lucas Nahas Martinez and Thomas Paterson</li>
@@ -159,8 +148,8 @@ course.
 </section>
 </section>
 <section>
-<section id="slide-org4140ab6">
-<h2 id="org4140ab6">Components of assessment</h2>
+<section id="slide-org6b88247">
+<h2 id="org6b88247">Components of assessment</h2>
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
 
@@ -261,22 +250,21 @@ half of semester 2.
 
 </aside>
 
-
 </section>
 </section>
 <section>
-<section id="slide-org44b5360">
-<h2 id="org44b5360">Format</h2>
+<section id="slide-org47dfc4f">
+<h2 id="org47dfc4f">Format</h2>
 <ul>
 <li>tutorial worksheets
 <ul>
 <li>released at the beginning of the week</li>
 <li>uploaded to Myplace by midnight on Monday</li>
 <li>fully worked model solutions released on Tuesday</li>
-<li>peer assessment of two other tutorials</li>
+<li>peer assessment of two other tutorials by Sunday</li>
 
 </ul></li>
-<li>lectures and Q&amp;A sessions on Wednesdays and Fridays</li>
+<li>lectures and Q&amp;A sessions on Mondays and Wednesdays</li>
 
 </ul>
 
@@ -317,7 +305,6 @@ this is to give helpful comments to where students could improve their
 work and they way it is documented.  The other purpose of this is to
 ensure that you have looked at and understand the model solutions.
 </p>
-
 
 
 <p>
@@ -375,8 +362,8 @@ able to use these tools you have developed in your further career.
 </section>
 </section>
 <section>
-<section id="slide-org0e5d772">
-<h2 id="org0e5d772">Prerequisites</h2>
+<section id="slide-orgba09c8c">
+<h2 id="orgba09c8c">Prerequisites</h2>
 <ul>
 <li>CP101: Basic Principles in Chemical Engineering</li>
 <li>CP102: Chemical Engineering: Fundamentals, Techniques and Tools</li>
@@ -431,11 +418,11 @@ that you are confident that you understand them thoroughly.
 </section>
 </section>
 <section>
-<section id="slide-org926e042">
-<h2 id="org926e042">Key learning objectives</h2>
+<section id="slide-orgf5bd7a6">
+<h2 id="orgf5bd7a6">Key learning objectives</h2>
 <ul>
 <li>Mathematics</li>
-<li>Programming with Python</li>
+<li>Using Python</li>
 <li>Problem solving</li>
 
 </ul>
@@ -502,8 +489,8 @@ those tools and interpreting the results.
 </section>
 </section>
 <section>
-<section id="slide-org2ba6b5b">
-<h2 id="org2ba6b5b">Balances</h2>
+<section id="slide-orgc07b38a">
+<h2 id="orgc07b38a">Balances</h2>
 <div>
 \begin{align*}
 {\rm accumulation} &= {\rm in~flow} - {\rm out~flow} + {\rm generation}
@@ -535,8 +522,8 @@ and
 </section>
 </section>
 <section>
-<section id="slide-orgc7da0e8">
-<h2 id="orgc7da0e8">Calculus</h2>
+<section id="slide-org1c65d97">
+<h2 id="org1c65d97">Calculus</h2>
 <ul>
 <li>differentiation</li>
 <li>integration</li>
@@ -554,8 +541,8 @@ f(b) - f(a)
 
 
 </section>
-<section id="slide-orge85928c">
-<h3 id="orge85928c">review question:</h3>
+<section id="slide-org7f8faee">
+<h3 id="org7f8faee">review question:</h3>
 <p>
 Integrate:
 </p>
@@ -569,8 +556,8 @@ I &= \int dx\, x e^{-a x^2}
 
 
 </section>
-<section id="slide-org2f953c4">
-<h3 id="org2f953c4">review question:</h3>
+<section id="slide-org593deca">
+<h3 id="org593deca">review question:</h3>
 <p>
 Integrate:
 </p>
@@ -587,8 +574,8 @@ I &= \int dx\,x \sin x
 
 
 </section>
-<section id="slide-org48c84f0">
-<h3 id="org48c84f0">review question:</h3>
+<section id="slide-org15497ce">
+<h3 id="org15497ce">review question:</h3>
 <p>
 Integrate:
 </p>
@@ -604,17 +591,30 @@ I &= \int dx\,x^2 e^{-x} \sin x
 </section>
 </section>
 <section>
-<section id="slide-org9d1ee95">
-<h2 id="org9d1ee95">Python programming</h2>
+<section id="slide-orgaee7ffe">
+<h2 id="orgaee7ffe">How do you solve problems?</h2>
+<div>
 
-<div id="org2d65cb7" class="figure">
+<div id="orge2baa04" class="figure">
+<p><img src="./intro/1726597170885.jpg" alt="1726597170885.jpg" height="500" />
+</p>
+</div>
+</div>
+
+</section>
+</section>
+<section>
+<section id="slide-org06b6fe4">
+<h2 id="org06b6fe4">Python programming</h2>
+
+<div id="org28e50a8" class="figure">
 <p><img src="./intro/side1half.jpg" alt="side1half.jpg" />
 </p>
 </div>
 
 <div class="column" style="float:left; width:30%">
 
-<div id="org64a530c" class="figure">
+<div id="org4cfc846" class="figure">
 <p><img src="./intro/casio_350_calculator_1512286180_ab688b83.jpg" alt="casio_350_calculator_1512286180_ab688b83.jpg" height="400" />
 </p>
 </div>
@@ -622,7 +622,7 @@ I &= \int dx\,x^2 e^{-x} \sin x
 
 <div class="column" style="float:right; width:70%">
 
-<div id="orge034035" class="figure">
+<div id="org9dbefd1" class="figure">
 <p><img src="./intro/code_cell.png" alt="code_cell.png" height="400" />
 </p>
 </div>
@@ -647,8 +647,8 @@ I &= \int dx\,x^2 e^{-x} \sin x
 </aside>
 
 </section>
-<section id="slide-org19ca7bb">
-<h3 id="org19ca7bb">Python as a calculator</h3>
+<section id="slide-org0ff36ee">
+<h3 id="org0ff36ee">Python as a calculator</h3>
 <p>
 See the Jupyter notebook: <a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/python_calculator.ipynb">binder</a> or <a href="https://colab.research.google.com/github/mjksill/CP213-online/blob/master/notebooks/python_calculator.ipynb">colab</a>.
 </p>
@@ -670,8 +670,8 @@ See the Jupyter notebook: <a href="https://mybinder.org/v2/gh/mjksill/CP213-onli
 
 
 </section>
-<section id="slide-org094a48f">
-<h3 id="org094a48f">Example using variables</h3>
+<section id="slide-org0fd061e">
+<h3 id="org0fd061e">Example using variables</h3>
 <div>
 <iframe allow="autoplay; fullscreen" height="500" width="1120" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29111&amp;code=cD~cHPkoDRjmze5AKdfGOIjDPWQ7Rny" frameborder="0" allowfullscreen></iframe>
 <!---iframe width="560" height="315" src="https://www.youtube.com/embed/16Yaz4oIkhw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe--->
@@ -686,13 +686,13 @@ See the Jupyter notebook: <a href="https://mybinder.org/v2/gh/mjksill/CP213-onli
 
 
 </section>
-<section id="slide-org624e5f7">
-<h3 id="org624e5f7">Variables: Numbers and strings</h3>
+<section id="slide-org894d041">
+<h3 id="org894d041">Variables: Numbers and strings</h3>
 <iframe allow="autoplay; fullscreen" height="500" width="500" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29216&amp;code=d5~ijLchTEOwGJMFWGf7RFQxZ9ZBPq8" frameborder="0" allowfullscreen></iframe>
 
 </section>
-<section id="slide-org6e7cedb">
-<h3 id="org6e7cedb">Variables: Lists</h3>
+<section id="slide-orgd25aff2">
+<h3 id="orgd25aff2">Variables: Lists</h3>
 <iframe allow="autoplay; fullscreen" height="500" width="1120" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29236&amp;code=cL~mfgCUbBNSZdDeCdWGhFAybiLyywg" frameborder="0" allowfullscreen></iframe>
 
 <p>
@@ -700,15 +700,15 @@ See the Jupyter notebook: <a href="https://mybinder.org/v2/gh/mjksill/CP213-onli
 </p>
 
 </section>
-<section id="slide-org3f0851c">
-<h3 id="org3f0851c">Variables: Dictionaries</h3>
+<section id="slide-org2551462">
+<h3 id="org2551462">Variables: Dictionaries</h3>
 <iframe allow="autoplay; fullscreen" height="500" width="500" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29339&amp;code=de~TDs6xrAtA4CCHNgzdMWVeqbpLI9b" frameborder="0" allowfullscreen></iframe>
 
 
 
 </section>
-<section id="slide-orgacd22b6">
-<h3 id="orgacd22b6">Example using dictionaries</h3>
+<section id="slide-orga60fbb4">
+<h3 id="orga60fbb4">Example using dictionaries</h3>
 <iframe allow="autoplay; fullscreen" height="500" width="500" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29221&amp;code=ct~RXSPpeK9MhrYbicpud7Bk9fTexcM" frameborder="0" allowfullscreen></iframe>
 
 <p>
@@ -716,17 +716,133 @@ See the Jupyter notebook: <a href="https://mybinder.org/v2/gh/mjksill/CP213-onli
 </p>
 
 </section>
-<section id="slide-org867b10c">
-<h3 id="org867b10c">More advanced use of dictionaries</h3>
+<section id="slide-org2a6567c">
+<h3 id="org2a6567c">More advanced use of dictionaries</h3>
 <iframe allow="autoplay; fullscreen" height="500" width="500" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=31008&amp;code=cT~vNz0yrmdyodcJPeOFPCWsuvO7OEQ" frameborder="0" allowfullscreen></iframe>
-
 
 
 </section>
 </section>
 <section>
-<section id="slide-org9ebe56f">
-<h2 id="org9ebe56f">Schedule</h2>
+<section id="slide-org815a1e2">
+<h2 id="org815a1e2">Overimitation</h2>
+<div>
+
+<div id="org4f7235c" class="figure">
+<p><img src="./intro/6096_web.jpg" alt="6096_web.jpg" height="400" />
+</p>
+</div>
+</div>
+
+
+<aside class="notes">
+<p>
+
+</p>
+
+<ul>
+<li><a href="../../../../notes-roam/20221001120646-overimitation.html#ID-136b53b1-bc5c-455f-9c40-f476d331ab74">overimitation</a></li>
+
+</ul>
+
+</aside>
+
+</section>
+</section>
+<section>
+<section id="slide-org4fc38af">
+<h2 id="org4fc38af">Why is mathematics useful?</h2>
+<aside class="notes">
+<p>
+One of the key aspects of mathematics, and the reason why it is so
+important to engineering, is that it allows us to generalize problems
+and to see connections between seemingly different problems.
+</p>
+
+
+<ul>
+<li>Derivatives and integrals</li>
+<li>differential balances</li>
+
+</ul>
+
+
+<p>
+What is the use of linear algebra?
+</p>
+<ul>
+<li>we can represent data or systems within a vector space.  This then allows us to
+<ul>
+<li>language
+<ul>
+<li>word2vec</li>
+<li></li>
+
+</ul></li>
+
+</ul></li>
+
+</ul>
+
+<p>
+Mathematics as using tools 
+</p>
+
+<p>
+A lot of what you have been taught about math is within the frame if
+operating a tool.  You gave been focused on learning how to dig holes
+with a shovel.  Practicing digging ditches, filling holes, moving
+soil, etc.  You have spent little time on why the heck you actually
+want to have these holes, or why dirt needs to be moved from one place
+to another.  Also, we are in an age where no one really use shovels
+any more.  They now use excavators, drilling machines, etc.
+</p>
+
+<p>
+As an engineer, especially as a chemical engineer, we do not
+necessarily even know how to operate the equipment.  We are required
+to know how these things can help us achieve our goal, which will be
+at a higher, more abstract level.
+</p>
+
+</aside>
+
+
+</section>
+</section>
+<section>
+<section id="slide-orga13a859">
+<h2 id="orga13a859">Large Language Models and AI</h2>
+<div>
+
+<div id="org826598c" class="figure">
+<p><img src="./intro/LLM.png" alt="LLM.png" height="600" />
+</p>
+</div>
+</div>
+
+<aside class="notes">
+<ul>
+<li><a href="https://medium.com/fulcrumanalytics/a-deep-dive-into-specific-generative-ai-models-58fb11d346d8">https://medium.com/fulcrumanalytics/a-deep-dive-into-specific-generative-ai-models-58fb11d346d8</a></li>
+
+</ul>
+
+<p>
+Is it ok to use large language models?
+</p>
+
+<p>
+communication
+</p>
+
+</aside>
+
+
+</section>
+</section>
+<section>
+<section id="slide-orgbf838b9">
+<h2 id="orgbf838b9">Schedule for semester 1</h2>
 <ul>
 <li>Weeks 1-2: Python and its applications</li>
 <li>Weeks 3-5: Differential balances</li>
@@ -790,17 +906,17 @@ will be held on the Wednesday of week 11.
 </section>
 </section>
 <section>
-<section id="slide-org0bf6721">
-<h2 id="org0bf6721">Useful links</h2>
+<section id="slide-org8a938fc">
+<h2 id="org8a938fc">Useful links</h2>
 <ul>
 <li><a href="https://classes.myplace.strath.ac.uk/course/view.php?id=21595">Myplace</a>
 <ul>
 <li><a href="https://classes.myplace.strath.ac.uk/course/view.php?id=21595">https://classes.myplace.strath.ac.uk/course/view.php?id=21595</a></li>
 
 </ul></li>
-<li><a href="https://strath.zoom.us/j/97497583844">Zoom</a>
+<li><a href="https://colab.research.google.com/">Google Colab</a>
 <ul>
-<li><a href="https://strath.zoom.us/j/84160178271">https://strath.zoom.us/j/84160178271</a></li>
+<li><a href="https://colab.research.google.com/">https://colab.research.google.com/</a></li>
 
 </ul></li>
 
@@ -828,18 +944,26 @@ here.  This provides a structured view of the course materials as a
 whole.
 </p>
 
+<p>
+<a href="https://strath.zoom.us/j/97497583844">Zoom</a>
+</p>
+<ul>
+<li><a href="https://strath.zoom.us/j/84160178271">https://strath.zoom.us/j/84160178271</a></li>
+
+</ul>
+
 </aside>
 
 </section>
 </section>
 <section>
-<section id="slide-orgb2ac8b2">
-<h2 id="orgb2ac8b2">Additional resources</h2>
+<section id="slide-orga2cc1a1">
+<h2 id="orga2cc1a1">Additional resources</h2>
 <ul>
 <li>Books:
 <ul>
 <li>K. A. Stroud, Engineering Mathematics</li>
-<li>M L Hetland, Beginning Python: From novice to professional</li>
+<li>M. L. Hetland, Beginning Python: From novice to professional</li>
 
 </ul></li>
 
@@ -848,7 +972,7 @@ whole.
 <li>LearnChemE: <a href="http://www.learncheme.com/">http://www.learncheme.com/</a></li>
 <li>3Blue1Brown: <a href="https://www.youtube.com/c/3blue1brown">https://www.youtube.com/c/3blue1brown</a></li>
 <li>WolframAlpha: <a href="https://www.wolframalpha.com">https://www.wolframalpha.com</a></li>
-<li>Google Bard: <a href="https://bard.google.com/">https://bard.google.com/</a></li>
+<li>Google Gemini: <a href="https://gemini.google.com/">https://gemini.google.com/</a></li>
 
 </ul></li>
 
@@ -899,8 +1023,8 @@ class forum on Myplace.
 </section>
 </section>
 <section>
-<section id="slide-org11c2659">
-<h2 id="org11c2659">Questions?</h2>
+<section id="slide-org62f71ca">
+<h2 id="org62f71ca">Questions?</h2>
 <p>
 If you have any questions, please post to the class forum on Myplace
 or email me at leo.lue@strath.ac.uk.
@@ -927,7 +1051,7 @@ this semester.  Thank you.
 </section>
 </div>
 </div>
-<script src="../../reveal.js/dist/reveal.js"></script>
+<script src="../../reveal.js-fork/dist/reveal.js"></script>
 
 <script>
 // Full list of configuration options available here:
